[package]
name = "geode_messaging"
description = "A public broadcast messaging app."
version = "0.2.0"
authors = ["Dr. Amy Messegee <support@blockandpurpose.com>"]
edition = "2021"
overflow-checks = false

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
name = "geode_messaging"
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
]

ink-as-dependency = []
